@@ -123,7 +123,8 @@ PasswordSafe will open the default "My Safes" directory as it did prior to this 
 </tr>
 <tr>
 <td align="center" width="100">n/a</td>
-<td>Databases are always validated on opening.</td>
+<td>Databases are now always validated when opened. The Manage->Validate
+menu item has therefore been removed.</td>
 </tr>
 </tbody>
 </table>
